; ModuleID = '/home/carl/AnghaBench/the_silver_searcher/src/extr_print.c_print_init_context.c'
source_filename = "/home/carl/AnghaBench/the_silver_searcher/src/extr_print.c_print_init_context.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i8*, i8*, i64, i32, i64, i64, i64, i64, i32* }
%struct.TYPE_4__ = type { i64 }

@print_context = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@opts = common dso_local global %struct.TYPE_4__ zeroinitializer, align 8
@INT_MAX = common dso_local global i32 0, align 4
@FALSE = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @print_init_context() #0 {
  %1 = load i32*, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 9), align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %11

4:                                                ; preds = %0
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @opts, i32 0, i32 0), align 8
  %6 = add nsw i64 %5, 1
  %7 = call i32* @ag_calloc(i32 8, i64 %6)
  store i32* %7, i32** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 9), align 8
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 0), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 8), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 7), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 6), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 5), align 8
  %8 = load i32, i32* @INT_MAX, align 4
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 4), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 3), align 8
  %9 = load i8*, i8** @FALSE, align 8
  store i8* %9, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 2), align 8
  %10 = load i8*, i8** @FALSE, align 8
  store i8* %10, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @print_context, i32 0, i32 1), align 8
  br label %11

11:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32* @ag_calloc(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
